assets/css/aboutus.css
.flex-container {
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: flex-start;
    align-content: space-between;
    gap: var(--grid-gap);
}

.flex-container .member-tile {
    display: block;
    text-decoration: none;
    height: 460px;
    width: 380px;
    border-radius: 20px;

    color: var(---blackblack);
    background-color: var(--white);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

    text-align: center;
    padding-top: 42px;
}

.flex-container .member-tile:hover {
    cursor: pointer;
}

.member-tile-title {
    font-size: 24px;
    line-height: 29px;
    text-transform: uppercase;
}

.member-tile-subtitle {
    font-family: 'Lato';
    font-style: normal;
    font-weight: 300;
    font-size: 14px;
}

.member-details-modal-background {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #27272794;
    backdrop-filter: blur(10px);
}

.member-details-modal-content {
    display: none;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
    height: 100vh;

    padding: 30px 1em 1em 1em;
    z-index: 1002;

    background: var(--white);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    overflow: auto;
}

.member-details-modal-content-opened {
    display: block;
}

.member-details-modal-content-right-preview {
    display: none;
}

.member-details-modal-content-left-preview {
    display: none;
}

.modal-navigation {
    display: none;
}

.modal-navigation:hover {
    cursor: pointer;
}

.close-button {
    display: block;
    position: absolute;
    top: 10px;
    right: 10px;
}

.close-button:hover {
    cursor: pointer;
}

.member-details-modal-content-container {
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: flex-start;
    align-content: space-between;
    gap: var(--grid-gap);
}

.member-details-modal-content-container>div {
    width: 100%;
}

.member-details-modal-content-image-container {
    text-align: center;
}

.page-description {
    width: 90%;
    margin: 0 auto;
    padding: 30px 0 30px 0;
    font-size: 16px;
}

@media (min-width: 1024px) {

    .member-details-modal-content {
        width: 712px;
        height: 572px;
        margin: 0;
        padding: 36px 1em 1em 1em;
    }

    .member-details-modal-content-right-preview {
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-70%, -50%) scale(0.9);
        z-index: 1001;
        opacity: 0.7;
        display: block;
    }

    .member-details-modal-content-left-preview {
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-30%, -50%) scale(0.9);
        z-index: 1001;
        opacity: 0.7;
        display: block;
    }

    .modal-navigation {
        display: block;
        height: 40px;
        width: 40px;
    }

    .modal-navigation-left {
        position: absolute;
        transform: translate(-1250%);
        left: 50%;
        top: 50%;
        z-index: 1002;
    }

    .modal-navigation-right {
        position: absolute;
        transform: translate(1150%);
        left: 50%;
        top: 50%;
        z-index: 1002;
    }

    .member-details-modal-content-container>div {
        width: 40%;
    }

    .page-description {
        padding: 130px 0 30px 0;
    }
}

